<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppChatMessageContainer"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center_vertical|center_horizontal"
    android:padding="16dp"
    >

    <Button
        android:id="@+id/fragment_login_with_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_twitter"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/login_with_twitter_or"
        />

    <EditText
        android:id="@+id/fragment_login_with_nickname_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_with_nickname_input_hint"
        />

    <Button
        android:id="@+id/fragment_login_with_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_nickname"
        />

</LinearLayout>