<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingActivity" >

    <item android:id="@+id/action_information"
        android:title="@string/information_label"
        android:icon="@drawable/ic_action_light_about"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_dark_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:visible="false"
        />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_dark_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:visible="false"
        />

</menu>
