<?xml version="1.0" encoding="utf-8"?>
<!-- 発言一覧の一要素 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppChatMessageContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            style="@style/AppChatMessageIcon"
            android:id="@+id/chat_message_item_user_icon"
            android:layout_width="@dimen/chat_message_icon_size"
            android:layout_height="@dimen/chat_message_icon_size"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/app_chat_message_icon_label"
            />

        <TextView
            style="@style/AppChatMessageNickname"
            android:id="@+id/chat_message_item_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@+id/chat_message_item_user_icon"
            android:layout_toLeftOf="@+id/chat_message_item_timestamp"
            android:text="@string/app_dummy_chat_message_nickname"
            />

        <TextView
            style="@style/AppChatMessageTimestamp"
            android:id="@+id/chat_message_item_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            android:text="@string/app_dummy_chat_message_timestamp"
            />

        <TextView
            android:id="@+id/chat_message_item_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chat_message_item_nickname"
            android:layout_toRightOf="@+id/chat_message_item_user_icon"
            android:text="@string/app_dummy_chat_message_body"
            />

    </RelativeLayout>

    <TextView
        style="@style/AppChatMessagePlusPlus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_dummy_chat_message_plus_plus"
        />

</LinearLayout>