<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/baseline_padding"
        android:paddingBottom="@dimen/baseline_padding"
        android:clipToPadding="true"
        android:background="@color/item_background"
        >

        <TextView
            android:id="@+id/fragment_dialog_information_application_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_marginLeft="@dimen/baseline_padding"
            android:layout_marginRight="@dimen/baseline_padding"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/baseline_padding"
            android:layout_marginRight="@dimen/baseline_padding"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/information_about_this"
                android:autoLink="web"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_if_uneasiness_this"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/baseline_padding"
            android:background="@color/divider"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_marginLeft="@dimen/baseline_padding"
            android:layout_marginRight="@dimen/baseline_padding"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:text="@string/information_future_feature_label"
            />

        <TextView
            android:id="@+id/fragment_dialog_information_future_feature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/baseline_padding"
            android:layout_marginRight="@dimen/baseline_padding"
            android:textSize="14sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/baseline_padding"
            android:background="@color/divider"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_marginLeft="@dimen/baseline_padding"
            android:layout_marginRight="@dimen/baseline_padding"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:text="@string/information_link_label"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginLeft="@dimen/baseline_padding"
            android:layout_marginRight="@dimen/baseline_padding"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_link_demo_site_label"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_link_demo_site_url"
                android:autoLink="web"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginLeft="@dimen/baseline_padding"
            android:layout_marginRight="@dimen/baseline_padding"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_link_server_official_repository_label"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_link_server_official_repository_url"
                android:autoLink="web"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginLeft="@dimen/baseline_padding"
            android:layout_marginRight="@dimen/baseline_padding"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_link_application_official_repository_label"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_link_application_official_repository_url"
                android:autoLink="web"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>